Fixed Habit title alignment.

--- a/src/components/Habit/HabitItem/HabitDetail.module.css
+++ b/src/components/Habit/HabitItem/HabitDetail.module.css
@@ -7,6 +7,7 @@
 }
 
 .habit-detail__title {
+  text-align: center;
 }
 
 .habit-detail__title h3 {
